# radioripper

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.txt  config.json  docker-compose.yml  mkdocs.yml  prompt.md  pyproject.toml  radio_ripper.pid  radio_ripper.py  requirements.txt  run.sh  update-prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: REFACTORING-PLAN.md  changelog.md  index.md
docs/arc42/: 01_introduction_and_goals.md  02_constraints.md  03_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_design_decisions.md  10_quality_requirements.md  11_risks.md  12_glossary.md  architecture.md
docs/arc42/adrs/: 0001-async-await-vs-threading.md  0002-service-abcs-di.md  0003-pydantic-v2-config.md  0004-complete-songs-only.md
docs/diagrams/: components.puml  container.puml  deployment.puml  gui-architecture.puml  icy-state-machine.puml  sequence-recording.puml
recordings_ddd/: ripper.db
site/: 404.html  index.html
site/REFACTORING-PLAN/: index.html
site/arc42/01_introduction_and_goals/: index.html
site/arc42/02_constraints/: index.html
site/arc42/03_context/: index.html
site/arc42/04_solution_strategy/: index.html
site/arc42/05_building_block_view/: index.html
site/arc42/06_runtime_view/: index.html
site/arc42/07_deployment_view/: index.html
site/arc42/08_concepts/: index.html
site/arc42/09_design_decisions/: index.html
site/arc42/10_quality_requirements/: index.html
site/arc42/11_risks/: index.html
site/arc42/12_glossary/: index.html
site/arc42/adrs/0001-async-await-vs-threading/: index.html
site/arc42/adrs/0002-service-abcs-di/: index.html
site/arc42/adrs/0003-pydantic-v2-config/: index.html
site/arc42/adrs/0004-complete-songs-only/: index.html
site/arc42/architecture/: index.html
site/changelog/: index.html
site/diagrams/: container.puml  sequence-recording.puml
site/search/: search_index.json
src/radio_ripper/: __init__.py  __main__.py  app.py  cli.py
src/radio_ripper/api/: __init__.py  config_api.py  library_api.py  ripper_api.py  station_api.py
src/radio_ripper/domain/: models.py
src/radio_ripper/gui/: __init__.py  gui.py
src/radio_ripper/infra/: config.py  errors.py  http.py  logging.py  resilience.py
src/radio_ripper/services/: fingerprint.py  icy.py  metadata.py  playlist.py  playlist_discovery.py  repository.py  storage.py  stream.py  tagging.py
tests/: conftest.py  test_app.py  test_cli.py
tests/api/: __init__.py  test_config_api.py  test_library_api.py  test_ripper_api.py  test_station_api.py
tests/domain/: test_models.py
tests/gui/: __init__.py  test_gui.py
tests/infra/: test_config.py  test_errors.py  test_http.py  test_logging.py  test_resilience.py
tests/services/: test_fingerprint.py  test_icy.py  test_metadata.py  test_playlist.py  test_playlist_discovery.py  test_repository.py  test_storage.py  test_stream.py  test_tagging.py
