[project]
name = "radio-ripper"
version = "1.0.0"
description = "Production-grade Webradio-Ripper: dauerhaftes Multi-Stream-Aufzeichnen mit ICY-Metadaten-Songtrennung, Duplikats-DB und ID3v2-Tagging."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Radio-Ripper Contributors" },
]
keywords = ["webradio", "streamripper", "icy", "mp3", "recording", "radio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "requests>=2.31.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pyright>=1.1.350",
]

[project.urls]
Homepage = "https://github.com/radioripper/radioripper"
Repository = "https://github.com/radioripper/radioripper"
Issues = "https://github.com/radioripper/radioripper/issues"

[project.scripts]
radio-ripper = "radio_ripper:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["radio_ripper.py"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "recordings"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-too-long handled via line-length
]

[tool.pyright]
include = ["radio_ripper.py"]
exclude = ["recordings", ".venv"]
typeCheckingMode = "basic"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"