[project]
name = "radio-ripper"
version = "2.0.0"
description = "Production-grade Webradio-Ripper: dauerhaftes paralleles Aufzeichnen von ICY-Metadaten-Streams mit Song-Trennung, Duplikats-DB, ID3v2-Tagging und iTunes-Enrichment."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Radio-Ripper Contributors" }]
keywords = ["webradio", "streamripper", "icy", "mp3", "recording", "radio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
gui = [
    "gradio>=4.44.0",
]

[project.urls]
Homepage = "https://github.com/radioripper/radioripper"
Repository = "https://github.com/radioripper/radioripper"
Issues = "https://github.com/radioripper/radioripper/issues"

[project.scripts]
radio-ripper = "radio_ripper.cli:main"
radio-ripper-gui = "radio_ripper.gui:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radio_ripper"]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=radio_ripper --cov-report=term-missing --cov-report=html"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
source = ["src/radio_ripper"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["recordings", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["radio_ripper"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["radio_ripper"]
strict = true
warn_return_any = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mutagen.*", "respx.*", "gradio.*", "huggingface_hub.*", "numpy.*", "pandas.*", "gradio_client.*", "fastapi.*", "starlette.*", "pydub.*", "typer.*"]
ignore_missing_imports = true
follow_imports = "skip"
